--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Sam Ashkan Far</title>
+	<title>Sam&#39;s Portfolio</title>
 	<script>(function(d,e){d[e]=d[e].replace("no-js","js");})(document.documentElement,"className");</script>
 	<meta name="description" content="">
 	
 	
 	<link rel="dns-prefetch" href="//fonts.googleapis.com">
 	<link rel="dns-prefetch" href="//fonts.gstatic.com">
-	<link rel="alternate" type="application/rss+xml" href="/index.xml" title="Sam Ashkan Far">
+	<link rel="alternate" type="application/rss+xml" href="/index.xml" title="Sam's Portfolio">
 	<link href="https://fonts.googleapis.com/css?family=Poppins|Roboto:500o&display=swap" rel="stylesheet"> 
 	<link rel="stylesheet" href="/css/style.css">
 	<link rel="stylesheet" href="/css/style.min.css">
